--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "gd/plesk-bundle",
     "type": "symfony-bundle",
     "description": "Symfony2 Bundle for Parallels Plesk (v12) API.",
-    "keywords": ["plesk","api"],
+    "keywords": ["plesk","api", "parallels"],
     "homepage": "http://www.generaldigital.co.nz",
     "license": "MIT",
     "authors": [
