--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,6 +8,10 @@
         </testsuite>
     </testsuites>
 
+     <php>
+        <server name="KERNEL_DIR" value="../../../app" />
+    </php>
+
     <filter>
         <whitelist>
             <directory>./</directory>
