--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "symfony-bundle",
     "description": "Symfony2 Bundle for Parallels Plesk (v12) API.",
     "keywords": ["plesk","api", "parallels"],
-    "homepage": "http://www.generaldigital.co.nz",
+    "homepage": "https://www.linkedin.com/pub/zivko-sudarski/5a/52/bb4",
     "license": "MIT",
     "authors": [
         {
